--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "firebase": "^10.14.0",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.79.4"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
