--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "firebase": "^10.14.0",
     "next": "14.2.14",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.79.4"
