--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "firebase": "^10.14.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "react": "^18",
@@ -24,6 +25,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
